--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.percent.PercentRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.scau.mimi.activity.LoginActivity">
+    tools:context="org.scau.mimi.activity.LoginActivity"
+    android:background="#454e5f">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/et_login_password"
+        app:layout_widthPercent="50%"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:passwordToggleTint="@drawable/sel_eye"
+        app:passwordToggleEnabled="true"
+        android:textColorHint="#ffffff"
+        app:hintTextAppearance="@style/TextAppearance.AppCompat.hint"
+
+        >
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPassword"
+            android:hint="Password"
+            android:textColor="#ffffff"
+            app:theme="@style/MyEditText"
+            android:lines="1"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/et_login_account"
+        app:layout_widthPercent="50%"
+        android:layout_height="wrap_content"
+        android:textColorHint="#ffffff"
+        app:hintTextAppearance="@style/TextAppearance.AppCompat.hint"
+        android:layout_above="@id/et_login_password"
+        android:layout_alignLeft="@id/et_login_password">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Account"
+            android:textColor="@android:color/white"
+            app:theme="@style/MyEditText"
+            android:lines="1"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <com.unstoppable.submitbuttonview.SubmitButton
+        android:id="@+id/btn_login"
+        app:layout_widthPercent="50%"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_login_password"
+        android:layout_alignLeft="@id/et_login_password"
+        app:buttonText="login"
+        app:buttonColor="#009586"
+        android:background="?android:attr/selectableItemBackground"/>
+
+</android.support.percent.PercentRelativeLayout>
