--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,54 +6,72 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.scau.mimi.activity.LoginActivity"
-    android:background="#454e5f">
+    android:background="#3C697C">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/et_login_password"
-        app:layout_widthPercent="50%"
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.CardView
+        app:layout_widthPercent="80%"
+        app:layout_heightPercent="50%"
         android:layout_centerInParent="true"
-        app:passwordToggleTint="@drawable/sel_eye"
-        app:passwordToggleEnabled="true"
-        android:textColorHint="#ffffff"
-        app:hintTextAppearance="@style/TextAppearance.AppCompat.hint"
-
-        >
-        <EditText
+        android:background="#59c7e8"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="20dp">
+        <android.support.percent.PercentRelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:textColor="#ffffff"
-            app:theme="@style/MyEditText"
-            android:lines="1"/>
-    </android.support.design.widget.TextInputLayout>
+            android:background="#6fcde8">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/et_login_account"
-        app:layout_widthPercent="50%"
-        android:layout_height="wrap_content"
-        android:textColorHint="#ffffff"
-        app:hintTextAppearance="@style/TextAppearance.AppCompat.hint"
-        android:layout_above="@id/et_login_password"
-        android:layout_alignLeft="@id/et_login_password">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Account"
-            android:textColor="@android:color/white"
-            app:theme="@style/MyEditText"
-            android:lines="1"/>
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/et_login_password"
+                app:layout_widthPercent="50%"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                app:passwordToggleTint="@drawable/sel_eye"
+                app:passwordToggleEnabled="true"
+                android:textColorHint="#ffffff"
+                app:hintTextAppearance="@style/TextAppearance.AppCompat.hint"
+                android:layout_margin="10dp">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:hint="Password"
+                    android:textColor="#ffffff"
+                    app:theme="@style/MyEditText"
+                    android:lines="1"
+                    android:textSize="20sp"/>
+            </android.support.design.widget.TextInputLayout>
 
-    <com.unstoppable.submitbuttonview.SubmitButton
-        android:id="@+id/btn_login"
-        app:layout_widthPercent="50%"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/et_login_password"
-        android:layout_alignLeft="@id/et_login_password"
-        app:buttonText="login"
-        app:buttonColor="#009586"
-        android:background="?android:attr/selectableItemBackground"/>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/et_login_account"
+                app:layout_widthPercent="50%"
+                android:layout_height="wrap_content"
+                android:textColorHint="#ffffff"
+                app:hintTextAppearance="@style/TextAppearance.AppCompat.hint"
+                android:layout_above="@id/et_login_password"
+                android:layout_centerInParent="true"
+                android:layout_margin="10dp">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Account"
+                    android:textColor="@android:color/white"
+                    app:theme="@style/MyEditText"
+                    android:lines="1"
+                    android:textSize="20sp"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <com.unstoppable.submitbuttonview.SubmitButton
+                android:id="@+id/btn_login"
+                app:layout_widthPercent="40%"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/et_login_password"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:padding="10dp"
+                app:buttonText="login"
+                app:buttonColor="#009586"
+                android:background="?android:attr/selectableItemBackground"/>
+        </android.support.percent.PercentRelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </android.support.percent.PercentRelativeLayout>
