修改MainActivity UI，初步构建MomentFragment UI

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="NavTextStyle" parent="TextAppearance.AppCompat.Menu">
+        <item name="android:textSize">30sp</item>
+    </style>
+
+
 </resources>
