--- a/app/src/main/res/layout/nav_content.xml
+++ b/app/src/main/res/layout/nav_content.xml
@@ -4,10 +4,8 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Chat Fragment"/>
-
-
+    <ImageView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@mipmap/ic_launcher"/>
 </LinearLayout>
