--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,12 @@
             <!--android:layout_centerHorizontal="true"-->
             <!--android:layout_alignParentBottom="true"/>-->
 
+        <FrameLayout
+            android:id="@+id/fl_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </FrameLayout>
+
         <client.yalantis.com.foldingtabbar.FoldingTabBar
             android:id="@+id/ftb_main_menu"
             android:layout_width="wrap_content"
