--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,17 @@
             android:layout_marginBottom="15dp"
             app:menu="@menu/menu_faboptions"/>
 
+        <ImageView
+            android:layout_width="@dimen/ftb_size_mini"
+            android:layout_height="@dimen/ftb_size_mini"
+            android:layout_alignTop="@id/ftb_main_menu"
+            android:layout_toRightOf="@id/ftb_main_menu"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="90dp"
+            android:padding="10dp"
+            android:src="@drawable/ic_home_white_18dp"
+            android:background="@drawable/shape_addition_button"/>
+
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
