--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dl_main"
     android:layout_width="match_parent"
@@ -10,22 +11,15 @@
     android:background="#62cfca">
 
     <RelativeLayout
-        android:id="@+id/rl_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#4a4a52">
 
-        <!--<com.joaquimley.faboptions.FabOptions-->
-            <!--android:id="@+id/fo_main_menu"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_alignParentBottom="true"/>-->
-
         <FrameLayout
             android:id="@+id/fl_fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
         </FrameLayout>
 
         <client.yalantis.com.foldingtabbar.FoldingTabBar
@@ -35,18 +29,22 @@
             android:layout_centerInParent="true"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="15dp"
-            app:menu="@menu/menu_faboptions"/>
+            app:menu="@menu/menu_faboptions"
+            />
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/fab_addtion_button_left"
             android:layout_width="@dimen/ftb_size_mini"
             android:layout_height="@dimen/ftb_size_mini"
             android:layout_alignTop="@id/ftb_main_menu"
-            android:layout_toRightOf="@id/ftb_main_menu"
+            android:layout_toLeftOf="@id/ftb_main_menu"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="90dp"
+            android:layout_marginRight="90dp"
             android:padding="10dp"
-            android:src="@drawable/ic_home_white_18dp"
-            android:background="@drawable/shape_addition_button"/>
+            android:background="@drawable/shape_addition_button"
+            android:src="@drawable/ic_moment_edit"
+            />
+
 
     </RelativeLayout>
 
