--- a/app/src/main/res/layout/fragment_moment.xml
+++ b/app/src/main/res/layout/fragment_moment.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/trl_refresh_moment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/srl_refresh_moment"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_moment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_moment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+    <!--<com.melnykov.fab.FloatingActionButton-->
+    <!--android:id="@+id/fab_addtion_button_test"-->
+    <!--android:layout_width="@dimen/ftb_size_mini"-->
+    <!--android:layout_height="@dimen/ftb_size_mini"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_marginTop="10dp"-->
+    <!--android:layout_marginLeft="90dp"-->
+    <!--android:layout_marginBottom="30dp"-->
+    <!--android:padding="10dp"-->
+    <!--android:src="@drawable/ic_home_white_18dp"-->
+    <!--android:background="@drawable/shape_addition_button"-->
+    <!--/>-->
 
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-
-
-
-</LinearLayout>
+</com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
