--- a/app/src/main/res/layout/item_moment.xml
+++ b/app/src/main/res/layout/item_moment.xml
@@ -4,67 +4,220 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_margin="@dimen/margin_normal"
+    android:padding="@dimen/padding_small"
     app:cardCornerRadius="10dp"
     android:fitsSystemWindows="true"
+    android:background="?attr/selectableItemBackgroundBorderless"
     >
 
-    <android.support.percent.PercentRelativeLayout
+    <!--用于做整体布局容器-->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/selectableItemBackgroundBorderless"
+        android:orientation="horizontal"
         android:fitsSystemWindows="true"
+        android:padding="@dimen/padding_small"
         >
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <!--左侧-->
+        <LinearLayout
             android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/civ_moment_portrait"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:padding="@dimen/padding_normal"
-            android:src="@drawable/zs"
-            android:fitsSystemWindows="true"
-            />
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/margin_normal"
+            android:paddingBottom="@dimen/margin_normal"
+            >
 
-        <TextView
-            android:id="@+id/tv_moment_text"
-            android:layout_width="wrap_content"
-            android:layout_toRightOf="@id/civ_moment_portrait"
-            android:height="200dp"
-            android:gravity="center"
-            android:padding="@dimen/padding_normal"
-            android:text="正文"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:fitsSystemWindows="true"
-            />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/civ_moment_portrait"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/zs"
+                />
 
-        <com.sackcentury.shinebuttonlib.ShineButton
-            android:id="@+id/sb_like_button"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignLeft="@id/tv_moment_text"
-            android:layout_below="@id/tv_moment_text"
-            app:allow_random_color="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@android:color/darker_gray"
-            app:btn_color="@android:color/darker_gray"
-            app:btn_fill_color="@android:color/holo_green_dark"
-            app:siShape="@raw/heart"
-            android:fitsSystemWindows="true"
-            />
+        </LinearLayout>
 
-        <org.scau.mimi.other.MultiScrollNumber
-            android:id="@+id/msn_like_number"
-            android:layout_width="30dp"
-            android:layout_height="20dp"
-            android:layout_toRightOf="@id/sb_like_button"
-            android:layout_alignBaseline="@id/sb_like_button"
-            android:layout_alignBottom="@id/sb_like_button"
-            app:number_size="20"
-            android:fitsSystemWindows="true"
-            />
 
-    </android.support.percent.PercentRelativeLayout>
+        <!--右侧-->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <!--昵称，时间，地区-->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_small"
+                >
+
+                <TextView
+                    android:id="@+id/tv_nickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:text="昵称"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_post_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@id/tv_nickname"
+                    android:textSize="12sp"
+                    android:text="时间"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:textSize="15sp"
+                    android:text="地点"
+                    />
+
+            </RelativeLayout>
+
+            <!--文字-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_small"
+                >
+
+                <TextView
+                    android:id="@+id/tv_moment_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:padding="@dimen/padding_normal"
+                    android:text="正文"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    />
+
+            </LinearLayout>
+
+            <!--图片-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_small"
+                android:orientation="horizontal"
+                >
+
+                <ImageView
+                    android:id="@+id/iv_pic_1"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:layout_marginBottom="@dimen/margin_normal"
+                    android:layout_marginLeft="1dp"
+                    android:layout_marginRight="1dp"
+                    android:src="@drawable/zs"
+                    android:scaleType="centerCrop"
+
+                    />
+
+                <ImageView
+                    android:id="@+id/iv_pic_2"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/zs"
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:layout_marginBottom="@dimen/margin_normal"
+                    android:layout_marginLeft="1dp"
+                    android:layout_marginRight="1dp"
+                    android:scaleType="centerCrop"
+
+                    />
+
+                <ImageView
+                    android:id="@+id/iv_pic_3"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/zs"
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:layout_marginBottom="@dimen/margin_normal"
+                    android:layout_marginLeft="1dp"
+                    android:layout_marginRight="1dp"
+                    android:scaleType="centerCrop"
+
+                    />
+
+            </LinearLayout>
+
+            <!--点赞，评论，私聊-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_small"
+                android:orientation="horizontal"
+                >
+
+                <com.sackcentury.shinebuttonlib.ShineButton
+                    android:id="@+id/sb_like_button"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    app:allow_random_color="true"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:layout_margin="@dimen/margin_normal"
+                    android:src="@android:color/darker_gray"
+                    app:btn_color="@android:color/darker_gray"
+                    app:btn_fill_color="#ff0000"
+                    app:siShape="@raw/heart"
+                    />
+
+                <sumimakito.android.advtextswitcher.AdvTextSwitcher
+                    android:id="@+id/ats_like_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:textSize="10sp"
+                    />
+
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    />
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/ic_moment_comment"
+                    android:layout_gravity="center_vertical"
+                    />
+
+                <sumimakito.android.advtextswitcher.AdvTextSwitcher
+                    android:id="@+id/ats_comment_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:textSize="10sp"
+                    />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    />
+
+                <ImageButton
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/ic_moment_chat"
+                    android:layout_gravity="center_vertical"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
