--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <dimen name="design_navigation_icon_size" tools:override="true">40dp</dimen>
 
-    <dimen name="padding_normal">5dp</dimen>
+    <dimen name="padding_small">5dp</dimen>
+    <dimen name="padding_normal">10dp</dimen>
+    <dimen name="margin_normal">5dp</dimen>
 </resources>
