--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="sign_up_background">#242238</color>
+
 
     <color name="blue01">#0099CC</color>
     <color name="blue02">#079DD0</color>
