--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     android:background="#62cfca">
 
     <RelativeLayout
+        android:id="@+id/rl_main_home_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#4a4a52">
@@ -48,16 +49,24 @@
 
     </RelativeLayout>
 
-    <android.support.design.widget.NavigationView
+    <!--<android.support.design.widget.NavigationView-->
+        <!--android:layout_width="300dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--app:elevation="50dp"-->
+        <!--app:menu="@menu/nav_menu"-->
+        <!--app:headerLayout="@layout/nav_header"-->
+        <!--android:layout_gravity="left"-->
+        <!--android:tag="LEFT"-->
+        <!--android:background="#00000000"-->
+        <!--app:itemTextAppearance="@style/NavTextStyle"-->
+        <!--/>-->
+    <LinearLayout
         android:layout_width="300dp"
         android:layout_height="match_parent"
-        app:elevation="50dp"
-        app:menu="@menu/nav_menu"
-        app:headerLayout="@layout/nav_header"
         android:layout_gravity="left"
         android:tag="LEFT"
         android:background="#00000000"
-        app:itemTextAppearance="@style/NavTextStyle"/>
+        ></LinearLayout>
 
 
 </android.support.v4.widget.DrawerLayout>
