--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,14 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="200dp"
+    android:fitsSystemWindows="true">
 
     <de.hdodenhof.circleimageview.CircleImageView
         app:layout_widthPercent="50%"
         app:layout_heightPercent="50%"
         android:scaleType="centerCrop"
         android:src="@drawable/zs"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:fitsSystemWindows="true"/>
 
 
 </android.support.percent.PercentRelativeLayout>
