--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="padding_small">5dp</dimen>
     <dimen name="padding_normal">10dp</dimen>
     <dimen name="margin_normal">5dp</dimen>
+    <dimen name="matisse_pic_grid">128dp</dimen>
+    <dimen name="send_moment_pic_height">70dp</dimen>
+    <dimen name="send_moment_delete_pic_height">13dp</dimen>
+    <dimen name="send_moment_shape_delete_pic_height">15dp</dimen>
 </resources>
