--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,13 +60,6 @@
         <!--android:background="#00000000"-->
         <!--app:itemTextAppearance="@style/NavTextStyle"-->
         <!--/>-->
-    <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:tag="LEFT"
-        android:background="#00000000"
-        ></LinearLayout>
-
+    <include layout="@layout/include_drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
