添加点击图片查看大图功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#62cfca">
+    android:background="#62cfca"
+    tools:context=".activity.MainActivity"
+    >
 
     <RelativeLayout
         android:id="@+id/rl_main_home_layout"
