--- a/app/src/main/res/layout/item_moment.xml
+++ b/app/src/main/res/layout/item_moment.xml
@@ -115,6 +115,8 @@
                     android:scaleType="centerCrop"
                     android:clickable="true"
                     android:visibility="visible"
+                    android:transitionName="@string/image_transition"
+
                     />
 
                 <ImageView
@@ -130,6 +132,8 @@
                     android:clickable="true"
                     android:layout_toRightOf="@id/iv_moment_pic_0"
                     android:visibility="visible"
+                    android:transitionName="@string/image_transition"
+
                     />
 
                 <ImageView
@@ -145,6 +149,8 @@
                     android:clickable="true"
                     android:layout_toRightOf="@id/iv_moment_pic_1"
                     android:visibility="visible"
+                    android:transitionName="@string/image_transition"
+
                     />
 
             </android.support.percent.PercentRelativeLayout>
