--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,8 +11,9 @@
         app:layout_heightPercent="50%"
         android:layout_centerInParent="true"
         android:background="#59c7e8"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="20dp">
+        app:cardElevation="20dp"
+        >
+
         <android.support.percent.PercentRelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -79,6 +80,17 @@
                 app:cpb_textIdle="login"
                 android:background="?android:attr/selectableItemBackground"/>
         </android.support.percent.PercentRelativeLayout>
+
     </android.support.v7.widget.CardView>
+
+    <TextView
+        android:id="@+id/tv_login_go_to_sign_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Not registered yet?Click here to sign up."
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        />
 
 </android.support.percent.PercentRelativeLayout>
