--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,5 +24,10 @@
         <item name="android:textSize">30sp</item>
     </style>
 
+    <style name="MyPopupWindow">
+        <item name="android:windowEnterAnimation">@anim/popup_window_bottom_enter</item>
+        <item name="android:windowExitAnimation">@anim/popup_window_bottom_exit</item>
+    </style>
+
 
 </resources>
