优化评论界面

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#62cfca"
+    tools:context=".activity.MainActivity"
     >
 
     <RelativeLayout
         android:id="@+id/rl_main_home_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#4a4a52">
+        android:background="#4a4a52"
+        >
 
         <FrameLayout
             android:id="@+id/fl_fragment_container"
