--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -7,7 +7,7 @@
     >
 
     <TextView
-        android:id="@+id/tv_location"
+        android:id="@+id/tv_moment_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
