--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="TransitionTheme" parent="Theme.AppCompat.Light.NoActionBar"
+    <style name="Theme.AppCompat.AppTheme" parent="Theme.AppCompat.NoActionBar"
         >
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowTranslucentStatus">true</item>
 
         <item name="android:windowContentTransitions" tools:targetApi="lollipop">true</item>
+        <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
+        <!--<item name="android:windowEnterTransition" tools:targetApi="lollipop">@transition/explode</item>-->
+        <!--<item name="android:windowExitTransition" tools:targetApi="lollipop">@transition/fade</item>-->
+        <!--<item name="android:windowSharedElementEnterTransition" tools:targetApi="lollipop">@transition/changebounds</item>-->
+        <!--<item name="android:windowSharedElementExitTransition" tools:targetApi="lollipop">@transition/changebounds</item>-->
+
     </style>
     
     <style name="TextAppearance.AppCompat.hint" parent="TextAppearance.AppCompat">
