优化主页面加载和评论加载,增加单例模式以及一些工具类

--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -43,7 +43,7 @@
     //comment is here
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginBottom="50dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -66,20 +66,14 @@
 
         </RelativeLayout>
 
-        <ProgressBar
-            android:id="@+id/pb_comment_refresh"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_margin="@dimen/margin_normal"
-            android:clickable="false"
-            android:visibility="gone"
-            />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             />
+
 
     </LinearLayout>
 
